zone classification and interference map